# ddcbc-api

./: .gitignore  README.md  build.sh  ddcbc-api.c  ddcbc_api.c  main.c  meson.build
include/: ddcbc-api.h
src/: ddcbc-api.c
